<resources>
    <string name="app_name">MostLikeFood</string>
    <string name="foods_name">Nama Makanan</string>
    <string name="detail">Resep</string>
    <string name="list">List</string>
    <string name="recipe">Cara Membuat</string>
    <string name="bahan">Bahan</string>
    <string name="step">Langkah Pembuatan</string>
    <string name="gregorius_wisnu_wijanarko_tiba">Gregorius Wisnu Wijanarko Tiba</string>
    <string name="nama">Nama :</string>
    <string name="email">Email :</string>
    <string name="gregorius_tiba_binus_ac_id_na0050552_bangkit_academy">gregorius.tiba@binus.ac.id \na0050552@bangkit.academy</string>
    <string name="list2">List</string>
</resources>