<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/profile2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:layout_marginTop="16dp"
        android:paddingBottom="8dp"
        android:layout_marginLeft="16dp"
        android:textSize="20sp"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gregorius_wisnu_wijanarko_tiba"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginLeft="16dp"
        android:textSize="25sp"
        android:textAlignment="center"/>

    <TextView
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginLeft="16dp"
        android:textSize="20sp"/>

    <TextView
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gregorius_tiba_binus_ac_id_na0050552_bangkit_academy"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginLeft="16dp"
        android:textSize="20sp"/>



</LinearLayout>